--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react",
     "stories"
   ],
-  "main": "src/index.js",
+  "files": [
+    "dist/"
+  ],
+  "main": "dist/index.js",
   "scripts": {
     "build": "babel ./ --ignore node_modules,__tests__,__mocks__,coverage,dist --out-dir dist/"
   },
@@ -26,12 +29,17 @@
       "git add"
     ]
   },
+  "peerDependencies": {
+    "react": "*",
+    "@storybook/addons": ">=4.0.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addons": "^4.0.12",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.10.0",
     "eslint-plugin-jest": "^22.1.2",
@@ -40,6 +48,7 @@
     "husky": "^1.2.0",
     "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "react": "^16.6.3"
   }
 }
